<resources>
    <string name="app_name">ZTMPK</string>
    <string name="title_activity_find_stops">Znajdź Przystanek</string>
    <string name="title_activity_go_to_stop">Znajdź drogę</string>
    <string name="title_activity_stop">Wybrany Przystanek</string>
    <string name="title_activity_bus">Wybrany środek Transportu</string>
    <string name="title_activity_notification">Ekran zgłoszeń</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="action_sign_out_short">Wyloguj się</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_stop_text">Znajdź Przystanek</string>
    <string name="send">Zgłoś</string>
    <string name="Yes_text">TAK</string>
    <string name="No_text">NIE</string>
    <string name="line">linia:</string>
    <string name="name_stop">nazwa:</string>
    <string name="delay">spóźnienie:</string>
    <string name="brigade_nr">brygada:</string>
    <string name="direct_stop">kierunek:</string>
    <string name="bus_stop">słupek Przystankowy:</string>
    <string name="ret_but">Powrót do mapy</string>
    <string name="checkChange">Potwierdź</string>
    <string name="change_password">zmień hasło</string>
    <string name="password">Hasło:</string>
    <string name="new_password">Nowe hasło:</string>
    <string name="password_return">Powtórz hasło:</string>
    <string name="register">Zarejestruj się</string>
    <string name="mail">E-mail</string>
    <string name="my_profile">Mój profil</string>
    <string name="ref">odśwież</string>
    <string name="nr_line"><b>nr linii</b></string>
    <string name="direct"><b>kierunek</b></string>
    <string name="arrival"><b>odjazd</b></string>
    <string name="HowToGo">Wyznacz Dojście</string>
    <string name="PageZTM"> Pokaż na stronie ztm.waw.pl</string>
    <string name="have_account">Mam już konto</string>
    <string-array name="stop_problems">
        <item>brak tabliczki przystankowej</item>
        <item>zamazany rozkład</item>
        <item>inne</item>
    </string-array>
    <string-array name="bus_problems">
        <item>zatłoczenie</item>
        <item>awaria ogrzewania lub klimatyzacji</item>
        <item>inne</item>
    </string-array>
    <string name="checkNot">Potwierdź zgłoszenie</string>
    <string name="addNot">Dodaj nowe zgłoszenie</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="mapStyle">
        [
  {
    "featureType": "administrative.land_parcel",
    "elementType": "labels",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "landscape.man_made",
    "elementType": "geometry.stroke",
    "stylers": [
      {
        "saturation": -25
      },
      {
        "lightness": -30
      }
    ]
  },
  {
    "featureType": "landscape.natural.landcover",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#ff80ff"
      },
      {
        "saturation": -70
      },
      {
        "lightness": -65
      }
    ]
  },
  {
    "featureType": "landscape.natural.terrain",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#ff80ff"
      },
      {
        "saturation": -40
      }
    ]
  },
  {
    "featureType": "poi",
    "elementType": "labels.text",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.attraction",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "visibility": "simplified"
      }
    ]
  },
  {
    "featureType": "poi.attraction",
    "elementType": "labels.icon",
    "stylers": [
      {
        "saturation": -70
      },
      {
        "lightness": -5
      },
      {
        "visibility": "simplified"
      }
    ]
  },
  {
    "featureType": "poi.business",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.business",
    "elementType": "labels.icon",
    "stylers": [
      {
        "saturation": -40
      },
      {
        "lightness": -30
      }
    ]
  },
  {
    "featureType": "poi.government",
    "elementType": "labels.icon",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.medical",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#f984a4"
      },
      {
        "saturation": -45
      },
      {
        "lightness": 40
      }
    ]
  },
  {
    "featureType": "poi.park",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#bcefad"
      }
    ]
  },
  {
    "featureType": "poi.park",
    "elementType": "geometry.stroke",
    "stylers": [
      {
        "color": "#80ff80"
      },
      {
        "visibility": "on"
      }
    ]
  },
  {
    "featureType": "poi.park",
    "elementType": "labels.icon",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.place_of_worship",
    "elementType": "labels.icon",
    "stylers": [
      {
        "visibility": "off"
      },
      {
        "weight": 1.5
      }
    ]
  },
  {
    "featureType": "poi.school",
    "elementType": "labels.icon",
    "stylers": [
      {
        "saturation": -60
      },
      {
        "lightness": -60
      },
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.sports_complex",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#fe8181"
      },
      {
        "weight": 1.5
      }
    ]
  },
  {
    "featureType": "poi.sports_complex",
    "elementType": "labels.icon",
    "stylers": [
      {
        "saturation": -15
      },
      {
        "lightness": 5
      },
      {
        "weight": 4
      }
    ]
  },
  {
    "featureType": "road",
    "elementType": "labels.icon",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "road.arterial",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#fbfe7e"
      },
      {
        "weight": 1.5
      }
    ]
  },
  {
    "featureType": "road.highway",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#f08d20"
      },
      {
        "weight": 1.5
      }
    ]
  },
  {
    "featureType": "road.highway",
    "elementType": "geometry.stroke",
    "stylers": [
      {
        "saturation": -55
      }
    ]
  },
  {
    "featureType": "road.highway.controlled_access",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#9d5ecc"
      },
      {
        "saturation": -45
      },
      {
        "weight": 1.5
      }
    ]
  },
  {
    "featureType": "road.local",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#c0c0c0"
      },
      {
        "saturation": -65
      },
      {
        "lightness": -15
      },
      {
        "weight": 1
      }
    ]
  },
  {
    "featureType": "road.local",
    "elementType": "labels",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "road.local",
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#000000"
      }
    ]
  },
  {
    "featureType": "transit",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "transit.line",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#004080"
      }
    ]
  },
  {
    "featureType": "transit.station",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "saturation": -35
      },
      {
        "lightness": -25
      }
    ]
  },
  {
    "featureType": "transit.station.bus",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#0080ff"
      }
    ]
  },
  {
    "featureType": "transit.station.rail",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#804000"
      }
    ]
  }
]
    </string>
</resources>
