<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bus_cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StopActivity">

    <fragment
        android:id="@+id/stop_map"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="98dp" />

    <fragment
        android:id="@+id/stop_fragment"
        android:name="com.apackage.ztmpk.StopFragment"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/notification_fragment"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="197dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/stop_depatures"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stop_map"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="270dp" />

    <fragment
        android:id="@+id/notification_fragment"
        android:name="com.apackage.ztmpk.NotificationFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/stop_depatures"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="434dp" />

    <Button
        android:id="@+id/return_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ret_but" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:filterTouchesWhenObscured="false"
        android:forceHasOverlappingRendering="false"
        android:text="@string/nr_line"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop_depatures"
        android:layout_centerHorizontal="true"
        android:text="@string/direct"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stop_depatures"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/arrival"
        android:textColor="@color/colorAccent"/>


</RelativeLayout>