<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/mainMap"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/find_stop"
        android:layout_alignRight="@+id/find_stop"
        android:layout_below="@+id/mainMap"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="12dp"
        android:background="@color/back"
        android:text="@string/my_profile"
        android:textColor="@color/textProfile" />

    <Button
        android:id="@+id/find_stop"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_button"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/find_stop_text" />

    <Button
        android:id="@+id/goTo_location"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/find_stop"
        android:layout_alignBottom="@+id/find_stop"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_weight="1"
        android:text="Szukaj po lokalizacji" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/profile_button"
        android:layout_alignBottom="@+id/profile_button"
        android:layout_alignLeft="@+id/goTo_location"
        android:layout_alignStart="@+id/goTo_location"
        android:text="@string/ref"
        android:textColor="@color/textProfile" />

</RelativeLayout>